# Steganography

./: .gitignore  CMakeLists.txt  README.md  bitmap.h  isteganography.h  program.cpp  program_wrapper.cpp  program_wrapper.h  steganography  steganography.cpp  steganography.h
.github/workflows/: CPP-build.yml
data/: extractedOutput.txt  sampleInput.txt
tests/: CMakeLists.txt  program_test.cpp  steganography_test.cpp
